--- a/templates/form.ejs
+++ b/templates/form.ejs
@@ -21,7 +21,7 @@
           <a href="/registration" class="btn btn-student text-sm sm:text-2px md:text-md px-4 py-2 rounded-md border border-black hover:bg-black hover:text-white  ">Registration</a>
           
         </div>
-        <% if (typeof done !== 'undefined') { %>
+        <% if (typeof data.done !== 'undefined') { %>
          <script> alert("registered")</script> 
       <% } %>
       </div>
